fanout-ingress-dcflash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress-dcflash
  namespace: arnoldas
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
#    kubernetes.io/tls-acme: "true"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
#    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - jupyter"
#    ingress.kubernetes.io/rewrite-target
spec:
  rules:
  - host: dcflash.asrc.albany.edu
    http:
      paths:
      - path: /coeweather
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-nick-php
            port:
              number: 80
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: meso-web
            port:
              number: 3000

  tls:
    - hosts:
      - dcflash.asrc.albany.edu
#      secretName: letsencrypt-production
---
